--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1136,9 +1136,10 @@ img {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
-  -webkit-transition: all .2s ease-in-out;
-       -o-transition: all .2s ease-in-out;
-          transition: all .2s ease-in-out;
+  -webkit-transition: all .10s
+  ease-in-out;
+       -o-transition: all .10s ease-in-out;
+          transition: all .10s ease-in-out;
 }
 .img-circle {
   border-radius: 50%;
