--- a/css/menu.css
+++ b/css/menu.css
@@ -71,6 +71,18 @@
         color: #fff;
 
 }
+
+.list-inline {
+  padding-left: 0;
+  margin-left: -5px;
+  list-style: none;
+}
+.list-inline > li {
+  display: inline-block;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 .folder-child-wrapper {
     position: absolute;
     left: 50%;
