--- a/css/menu.css
+++ b/css/menu.css
@@ -121,7 +121,7 @@ ul.folder-child  li a {
     letter-spacing: 0px;
     font-family: futura-pt;
     font-size: 12px;
-    font-weight: 300;
+    /*font-weight: 300;*/
     font-style: normal;
     text-transform: lowercase;
     letter-spacing: 1px;
