--- a/css/menu.css
+++ b/css/menu.css
@@ -113,7 +113,7 @@ ul.folder-child  li a {
     text-decoration: underline;
 }
 
-#header li a p.fa-home {
+#header li a  {
     font-family: Arial,verdana,sans-serif;
     /*font-size: 15px;*/
     font-weight: 400;
@@ -132,7 +132,21 @@ ul.folder-child  li a {
 #header p{
     font-weight: 900;
     font-family: "Font Awesome 5 Free";
+        font-family: Arial,verdana,sans-serif;
+    /*font-size: 15px;*/
+    font-weight: 400;
+    text-transform: none;
+    letter-spacing: 0px;
+    font-family: futura-pt;
+    font-size: 12px;
+    font-weight: 300;
+    font-style: normal;
+    text-transform: lowercase;
+    letter-spacing: 1px;
+    line-height: 1.5em;
+    cursor: pointer;
 }
+
 
 #header a:hover, a:focus {
     color: #fff;
