--- a/css/menu.css
+++ b/css/menu.css
@@ -129,14 +129,12 @@ ul.folder-child  li a {
     cursor: pointer;
 }
 
-#header p.fas{
+#header .fas{
     font-family: "Font Awesome 5 Free";
     /*font-size: 15px;*/
-    font-weight: 400;
     text-transform: none;
     letter-spacing: 0px;
     font-size: 12px;
-    font-weight: 300;
     font-style: normal;
     text-transform: lowercase;
     letter-spacing: 1px;
