--- a/css/menu.css
+++ b/css/menu.css
@@ -246,6 +246,11 @@ ul.folder-child  li a {
       line-height: normal;
     }
 
+    #main h1, .h1, h2, .h2, h3, .h3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 /*----------------------------------------
   main end
 -----------------------------------------*/
