--- a/css/menu.css
+++ b/css/menu.css
@@ -180,7 +180,7 @@ ul.folder-child  li a {
 /*----------------------------------------
   main start
 -----------------------------------------*/
-     #main {
+    #main {
       max-width: 1200px;
       margin: 0 auto;
     }
@@ -246,7 +246,7 @@ ul.folder-child  li a {
       line-height: normal;
     }
 
-    #main h1, .h1, h2, .h2, h3, .h3 {
+    #content h1, .h1, h2, .h2, h3, .h3 {
     margin-top: 10px;
     margin-bottom: 10px;
 }
