--- a/css/menu.css
+++ b/css/menu.css
@@ -203,7 +203,17 @@ ul.folder-child  li a {
       max-width: 1100px;
       margin: 0 auto;
     }
+    #main02 .col-md-12 {
+      margin: 0 0 .5em;
+    }
 
+    #main02 .col-md-12 {
+      margin: 1em 0;
+      font-size: 14px
+        /*16px*/
+      ;
+      line-height: 1.5em;
+    }
     #main02 .col-md-6 {
       margin: 0 0 .5em;
     }
