--- a/css/menu.css
+++ b/css/menu.css
@@ -216,6 +216,7 @@ ul.folder-child  li a {
     }
     #main02 .col-md-6 {
       margin: 0 0 .5em;
+      padding: 0;
     }
 
     #main02 .col-md-6 {
