--- a/css/menu.css
+++ b/css/menu.css
@@ -209,10 +209,9 @@ ul.folder-child  li a {
 
     #main02 .col-md-12 {
       margin: 1em 0;
-      font-size: 14px
-        /*16px*/
-      ;
-      line-height: 1.5em;
+      font-size: 14px/*16px*/;
+      line-height: 35px;
+      letter-spacing: .2px;
     }
     #main02 .col-md-6 {
       margin: 0 0 .5em;
@@ -224,7 +223,8 @@ ul.folder-child  li a {
       font-size: 14px
         /*16px*/
       ;
-      line-height: 1.5em;
+      line-height: 35px;
+      letter-spacing: .2px;
     }
 
     p {
