--- a/css/menu.css
+++ b/css/menu.css
@@ -302,6 +302,7 @@ carousel start
     #carousel-custom {
       margin-top: 10px;
       width: 100%;
+      padding: 10px;
     }
 
     #carousel-custom .carousel-indicators {
