--- a/css/crime.css
+++ b/css/crime.css
@@ -6344,6 +6344,7 @@ button.close {
   background-image:         linear-gradient(to right, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
   background-repeat: repeat-x;
+  line-height: 0;
 }
 .carousel-control.right {
   right: 0;
@@ -6354,6 +6355,7 @@ button.close {
   background-image:         linear-gradient(to right, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
   background-repeat: repeat-x;
+    line-height: 0;
 }
 .carousel-control:hover,
 .carousel-control:focus {
