--- a/css/menu.css
+++ b/css/menu.css
@@ -403,6 +403,6 @@ carousel end
       font-style: normal;
       font-variant: normal;
       text-rendering: auto;
-      line-height: inherit;
+      line-height: unset;
   }
 }
