--- a/css/menu.css
+++ b/css/menu.css
@@ -301,7 +301,7 @@ carousel start
 =========================*/
     #carousel-custom {
       margin-top: 10px;
-      width: 100%;
+      width: 600px;
       padding: 10px;
     }
 
