--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@
     body {
       color: #fff;
       background-color: #000;
-      font-family: FeijoaWebMedium, "Times New Roman", 游明朝体, "Yu Mincho", YuMincho, serif;
+     font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
       font-weight: 400;
       font-size: 14px;
       line-height: 1.6em;
