--- a/css/menu.css
+++ b/css/menu.css
@@ -224,6 +224,7 @@ ul.folder-child  li a {
 
     p {
       word-wrap: break-word;
+      font-family: Arial,verdana,sans-serif;
 
     }
 
@@ -255,6 +256,7 @@ ul.folder-child  li a {
     #content h1, .h1, h2, .h2, h3, .h3 {
     margin-top: 10px;
     margin-bottom: 10px;
+    font-family: Arial,verdana,sans-serif;
 }
 
 /*----------------------------------------
