--- a/css/menu.css
+++ b/css/menu.css
@@ -165,10 +165,17 @@ ul.folder-child  li a {
     color: #fff;
 }
 
-
-.navbar-brand img {
+@media screen and (max-width: 768px){
+.navbar-brand .logo1 {
     width:100%;
     max-width:40px;
+}
+}
+@media screen and (min-width: 1200px){
+.navbar-brand .logo2 {
+    width:100%;
+    max-width:40px;
+}
 }
 
 
