--- a/css/menu.css
+++ b/css/menu.css
@@ -387,7 +387,7 @@ h3 {
     font-weight: bold;
 }
 
-.cover .btn-lg {
+#main02 .lead .btn {
     padding: 10px 20px;
     font-weight: 700;
     text-align: center;
