--- a/css/menu.css
+++ b/css/menu.css
@@ -389,7 +389,6 @@ h3 {
 
 #main02 .lead .btn {
     padding: 10px 20px;
-    font-weight: 700;
-    margin:0 0 0 0;
+    margin:10px 0 0 0;
     text-align: center;
 }
