--- a/css/menu.css
+++ b/css/menu.css
@@ -10,11 +10,11 @@
     }
 
     body {
-      color: rgb(255, 42, 0);
+      color: #fff;
       background-color: #000;
      font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";
       font-weight: 400;
-      font-size: 1.2rem;
+      font-size: 14px;
       line-height: 1.6em;
       letter-spacing: 0px;
       font-weight: 100;
@@ -391,4 +391,9 @@ h3 {
     padding: 10px 20px;
     margin:10px 0 0 0;
     text-align: center;
+}
+
+@media (min-width: 768px)
+.lead {
+    font-size: 1.2rem;
 }
