--- a/css/menu.css
+++ b/css/menu.css
@@ -388,7 +388,7 @@ h3 {
     font-weight: bold;
 }
 
-#main02 .lead .btn {
+p .lead .btn {
     padding: 10px 20px;
     margin:10px 0 0 0;
     text-align: center;
