--- a/css/crime.css
+++ b/css/crime.css
@@ -3442,10 +3442,10 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-lg,
 .btn-group-lg > .btn {
-  padding: 10px 16px;
+  /*padding: 10px 16px;
   font-size: 18px;
   line-height: 1.3333333;
-  border-radius: 6px;
+  border-radius: 6px;*/
 }
 .btn-sm,
 .btn-group-sm > .btn {
