--- a/css/crime.css
+++ b/css/crime.css
@@ -3124,8 +3124,8 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #242525;
+  border-color: #242425;
 }
 .btn-primary:focus,
 .btn-primary.focus {
