--- a/css/menu.css
+++ b/css/menu.css
@@ -2,7 +2,7 @@
   common start
 -----------------------------------------*/
    body {
-      /*background-image: url(images/bg.JPG);*/
+      background-image: url(https://i.pinimg.com/originals/9f/58/ba/9f58ba7d51c008540fa772463f80f946.png);
       background-position: center center;
       background-size: cover;
       background-attachment: fixed;
