--- a/css/menu.css
+++ b/css/menu.css
@@ -8,6 +8,12 @@
       background-attachment: fixed;
       background-repeat: no-repeat;
     }
+  body {
+      background-position: center center;
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+    }
 
     body {
 
