--- a/css/menu.css
+++ b/css/menu.css
@@ -187,7 +187,12 @@ ul.folder-child  li a {
       max-width: 1100px;
       margin: 0 auto;
     }
-
+#main02 .col-md-12
+  position: relative;
+  width: 100%;
+  padding-right: 30px;
+  padding-left: 30px;
+}
     #main .col-md-12 {
       display: block;
       border-bottom: 1px solid #ddd;
@@ -203,7 +208,7 @@ ul.folder-child  li a {
     }
 
     #main02 {
-      max-width: 1100px;
+      max-width: 1000px;
       margin: 0 auto;
     }
     #main02 .col-md-12 {
