--- a/css/menu.css
+++ b/css/menu.css
@@ -184,7 +184,7 @@ ul.folder-child  li a {
   main start
 -----------------------------------------*/
     #main {
-      /*max-width: 1100px;*/
+      max-width: 1100px;
       margin: 0 auto;
     }
 
