--- a/css/menu.css
+++ b/css/menu.css
@@ -30,7 +30,7 @@
 
     header {
       padding: 20px 20px 50px 20px;
-      max-width: 1100px;
+      /*max-width: 1100px;*/
       margin: 0 auto;
     }
 /*----------------------------------------
@@ -184,7 +184,7 @@ ul.folder-child  li a {
   main start
 -----------------------------------------*/
     #main {
-      max-width: 1100px;
+      /*max-width: 1100px;*/
       margin: 0 auto;
     }
 
