--- a/css/crime.css
+++ b/css/crime.css
@@ -1188,7 +1188,7 @@ h6,
     font-weight: 400;
     line-height: 1.2em;
     text-transform: uppercase;
-    font-family: proxima-nova;
+    /*font-family: proxima-nova;*/
     font-weight: 100;
     font-style: normal;
     line-height: .8em;
