--- a/css/menu.css
+++ b/css/menu.css
@@ -232,7 +232,7 @@ ul.folder-child  li a {
 
     #main02 .col-md-12 {
       margin: 1em 0;
-      font-size: 14px/*16px*/;
+      /*font-size: 14px;*/
       line-height: 35px;
       letter-spacing: .2px;
     }
