--- a/css/menu.css
+++ b/css/menu.css
@@ -119,7 +119,7 @@ ul.folder-child  li a {
     font-weight: 400;
     text-transform: none;
     letter-spacing: 0px;
-    font-size: 12px;
+    /*font-size: 12px;*/
     font-weight: 300;
     font-style: normal;
     text-transform: lowercase;
@@ -133,7 +133,7 @@ ul.folder-child  li a {
     font-weight: 1000;
     text-transform: none;
     letter-spacing: 0px;
-    font-size: 12px;
+    /*font-size: 12px;*/
     font-style: normal;
     text-transform: lowercase;
     letter-spacing: 2px;
