--- a/css/menu.css
+++ b/css/menu.css
@@ -116,28 +116,27 @@ ul.folder-child  li a {
 
 #header li a  {
     /*font-size: 15px;*/
-    font-weight: 400;
-    text-transform: none;
-    letter-spacing: 0px;
+    /*font-weight: 400;*/
+    /*text-transform: none;*/
+    /*letter-spacing: 0px;*/
     /*font-size: 12px;*/
-    font-weight: 300;
+    /*font-weight: 300;*/
     font-style: normal;
     text-transform: lowercase;
     letter-spacing: 2px;
-    line-height: 1.5em;
+    line-height: 0.1em;
     cursor: pointer;
 }
 
 #header .fas{
     /*font-size: 15px;*/
-    font-weight: 1000;
-    text-transform: none;
-    letter-spacing: 0px;
+    /*text-transform: none;*/
+    /*letter-spacing: 0px;*/
     /*font-size: 12px;*/
     font-style: normal;
     text-transform: lowercase;
     letter-spacing: 2px;
-    line-height: 1.5em;
+    line-height: 0.1em;
     cursor: pointer;
 }
 
