--- a/css/menu.css
+++ b/css/menu.css
@@ -280,7 +280,7 @@ ul.folder-child  li a {
     }
 
     #content h1, .h1, h2, .h2, h3, .h3 {
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     margin-bottom: 10px;
 }
 
