--- a/css/menu.css
+++ b/css/menu.css
@@ -305,6 +305,19 @@ ul.folder-child  li a {
       letter-spacing: .2px;
     }
 
+    [grid_row]{
+    align-items: flex-start;
+    box-sizing: border-box;
+    /* display: -webkit-box; */
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    /* display: flex; */
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+
     p {
       word-wrap: break-word;
 
