--- a/css/menu.css
+++ b/css/menu.css
@@ -326,7 +326,8 @@ ul.folder-child  li a {
     padding: .3rem 1rem;
   }
      .col-md-3  .button
-     a:hover{
+     a:hover,
+     a:focus{
     font-size: 1rem;
     border: 1px solid rgba(240, 240, 240, 1) !important;
     flex: 0 0 50%;
