--- a/css/menu.css
+++ b/css/menu.css
@@ -317,23 +317,18 @@ ul.folder-child  li a {
     flex-wrap: wrap;
   }
     .col-md-3  .button {
-    font-size: 1rem;
-    border: 1px solid rgba(250, 250, 250, 1) !important;
-    flex: 0 0 50%;
-    text-align: left;
+    color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
     display: inline-block;
     line-height: 1.2;
     padding: .3rem 1rem;
   }
     a.button:hover,
     a.button:focus{
-    font-size: 1rem;
-    border: 1px solid rgba(240, 240, 240, 1) !important;
-    flex: 0 0 50%;
-    text-align: left;
-    display: inline-block;
-    line-height: 1.2;
-    padding: .3rem 1rem;
+    color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
   }
 
     p {
