--- a/css/menu.css
+++ b/css/menu.css
@@ -307,11 +307,17 @@ ul.folder-child  li a {
 /*----------------------------------------
   grid start
 -----------------------------------------*/
+
     .grid_row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     margin: 0 auto;
     }
     .grid_row
-    {  display: block;
+    {
+    display: block;
     border-bottom: 1px solid #ddd;
     text-align: center;
     flex-basis: 0;
