--- a/css/menu.css
+++ b/css/menu.css
@@ -322,7 +322,7 @@ ul.folder-child  li a {
     padding: .5rem;
     }
 
-    .col-2.toybox {
+    .toybox {
     background-color: rgba(86,61,124,.15);
 }
 /*----------------------------------------
