--- a/css/menu.css
+++ b/css/menu.css
@@ -2,7 +2,7 @@
   common start
 -----------------------------------------*/
   #bg {
-      background-image: url(https://i.pinimg.com/originals/9f/58/ba/9f58ba7d51c008540fa772463f80f946.png);
+      background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
 
     }
   body {
