--- a/css/menu.css
+++ b/css/menu.css
@@ -3,6 +3,7 @@
 -----------------------------------------*/
   #bg {
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
+      opacity: 0.5;
 
     }
   body {
