--- a/css/menu.css
+++ b/css/menu.css
@@ -4,7 +4,7 @@
   #bg {
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
       background-color:rgba(255,255,255,0.8);
-      background-blend-mode:lighten;
+      background-blend-mode: difference;
     }
   body {
       background-position: center center;
