--- a/css/menu.css
+++ b/css/menu.css
@@ -3,7 +3,7 @@
 -----------------------------------------*/
   #bg {
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
-      background-color:rgba(255,255,255,0.8);
+      background-color:rgba(245, 233, 233, 97%);
       background-blend-mode: difference;
     }
   body {
