--- a/css/menu.css
+++ b/css/menu.css
@@ -14,7 +14,7 @@
     }
     body {
       color: #fff;
-      background-color:rgba(10, 13, 31, 100%);;
+      background-color: black;
       font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";
       font-weight: 400;
       font-size: 14px;
@@ -31,7 +31,7 @@
     body {
 
       color: #fff;
-      background-color: rgba(10, 13, 31, 100%);
+      background-color: black;
       font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";
       font-weight: 400;
       font-size: 14px;
@@ -49,7 +49,7 @@
     body {
 
       color: #fff;
-      background-color: rgba(10, 13, 31, 100%);
+      background-color: black;
       font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";
       font-weight: 400;
       font-size: 14px;
@@ -67,7 +67,7 @@
     body {
 
       color: #fff;
-      background-color: rgba(10, 13, 31, 100%);
+      background-color: black;
       font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";
       font-weight: 400;
       font-size: 14px;
