--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,7 @@
 /*----------------------------------------
   common start
 -----------------------------------------*/
-  #bg {
+  body {
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
       background-color:rgba(220, 220, 220, 97%);
       background-blend-mode: difference;
