--- a/css/menu.css
+++ b/css/menu.css
@@ -1,9 +1,9 @@
 /*----------------------------------------
   common start
 -----------------------------------------*/
-  body {
+  #bg {
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
-      background-color:rgba(220, 220, 220, 97%);
+      background-color:rgba(240, 240, 240, 97%);
       background-blend-mode: difference;
     }
   body {
