--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,16 @@
 /*----------------------------------------
   common start
 -----------------------------------------*/
-  #bg {
+  body {
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
-      background-color:rgba(240, 240, 240, 97%);
-      background-blend-mode: difference;
+      background-color:rgb(10 15 30 / 0.95);
+      background-blend-mode: color-burn;
+}
+
+
     }
+
+    background-color:rgba(10, 15, 30, 97%);
   body {
       background-position: center center;
       background-size: cover;
