--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,7 @@
 /*----------------------------------------
   common start
 -----------------------------------------*/
-  body {
+  #bg {
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
       background-color:rgb(10 15 30 / 0.95);
       background-blend-mode: color-burn;
@@ -13,6 +13,7 @@
       background-attachment: fixed;
       background-repeat: no-repeat;
     }
+
     body {
       color: #fff;
       background-color: black;
