--- a/css/menu.css
+++ b/css/menu.css
@@ -5,6 +5,22 @@
       background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
       background-color:rgb(255 255 255 / 0.95);
       background-blend-mode: exclusion;
+      background:
+        linear-gradient(
+          cyan,
+          transparent
+        ),
+        linear-gradient(
+          -45deg,
+          magenta,
+          transparent
+        ),
+        linear-gradient(
+          45deg,
+          yellow,
+          transparent
+        );
+      background-blend-mode: multiply;
 }
 
 
