--- a/css/menu.css
+++ b/css/menu.css
@@ -31,7 +31,7 @@
       font-style: normal;
       font-size: 10px;
       line-height: 1.4em;
-      letter-spacing: .26px;
+      letter-spacing: 0.05em;
     }
 
 
