--- a/css/menu.css
+++ b/css/menu.css
@@ -19,10 +19,7 @@
       color: #fff;
       background-color: black;
       /*font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";*/
-      font-family:
-        "M+ Type-1 (sample-j) Thin", "M+ P Type-1 (basic latin) Thin"
-        'M+ Type-1 (general-j) Regular', sans-serif
-        "M+ Type-1 (sample-j) Thin", "M+ P Type-1 (basic latin) Thin";
+      font-family: "Arial", "Yu Gothic", "Meiryo";
       font-weight: 400;
       font-size: 14px;
       line-height: 1.6em;
@@ -40,9 +37,6 @@
 
 @media (min-width: 1200px){
     body {
-      font-family:
-        'M+ C Type-1 (basic latin) Regular',
-        'M+ Type-1 (general-j) Regular', sans-serif;
       line-height: 2.1em;
 
     }
