--- a/css/menu.css
+++ b/css/menu.css
@@ -282,6 +282,13 @@ ul.folder-child  li a {
     padding: .5rem;
     }
 
+    .grid_row .row_first {
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+    padding: .5rem;
+    }
+
 /*----------------------------------------
   grid end
 -----------------------------------------*/
