--- a/css/menu.css
+++ b/css/menu.css
@@ -281,7 +281,18 @@ ul.folder-child  li a {
     text-align: center;
     padding: .5rem;
     }
-
+.row_first {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+.row_first {
+    margin-right: -15px;
+    margin-left: -15px;
+}
     .grid_row .row_first {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
