--- a/css/menu.css
+++ b/css/menu.css
@@ -296,7 +296,7 @@ ul.folder-child  li a {
     .grid_row .row_first {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
-    text-align: center;
+    text-align: left;
     padding: .5rem;
     }
 
