--- a/css/menu.css
+++ b/css/menu.css
@@ -19,7 +19,7 @@
       color: #fff;
       background-color: black;
       /*font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";*/
-      font-family: "Arial", "Yu Gothic", "Meiryo";
+      font-family: "Noto Sans JP","Arial", "Yu Gothic", "Meiryo";
       font-weight: 400;
       font-size: 14px;
       line-height: 1.6em;
