--- a/css/menu.css
+++ b/css/menu.css
@@ -289,6 +289,11 @@ ul.folder-child  li a {
     margin-right: -15px;
     margin-left: -15px;
 }
+@media (min-width: 1200px){
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
 }
     .grid_row .row_first {
     border-top: 1px solid #ddd;
