--- a/css/menu.css
+++ b/css/menu.css
@@ -485,5 +485,12 @@ h3 {
   display: flex!important;
 }
 /*----------------------------------------
-  img flex  start
+  btn start
 -----------------------------------------*/
+small.btn.btn-default{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border-left-width: 1px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
