--- a/css/menu.css
+++ b/css/menu.css
@@ -294,6 +294,7 @@ ul.folder-child  li a {
     margin-right: -15px;
     margin-left: -15px;
 }
+}
 @media (min-width: 1200px){
 .row {
     margin-right: -15px;
