--- a/css/menu.css
+++ b/css/menu.css
@@ -301,7 +301,9 @@ ul.folder-child  li a {
     margin-left: -15px;
 }
 }
-
+.row.toybox {
+    background-color: black;
+}
 
 /*----------------------------------------
   grid end
