--- a/css/menu.css
+++ b/css/menu.css
@@ -302,7 +302,7 @@ ul.folder-child  li a {
 }
 }
 .row.toybox {
-    background-color: black;
+    background-color: rgb(36 47 59 / 1);
 }
 
 /*----------------------------------------
