--- a/css/menu.css
+++ b/css/menu.css
@@ -20,7 +20,7 @@
       color: #fff;
       background-color: black;
       /*font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";*/
-      font-family: "Noto Serif JP","Arial", "Yu Gothic", "Meiryo" ;
+      /*font-family: "Noto Serif JP","Arial", "Yu Gothic", "Meiryo" ;*/
       font-weight: 400;
       font-size: 14px;
       letter-spacing: 0px;
