--- a/css/crime.css
+++ b/css/crime.css
@@ -1192,7 +1192,7 @@ h6,
     font-weight: 100;
     font-style: normal;
     line-height: .8em;
-    text-transform: lowercase;
+    /*text-transform: lowercase;*/
     letter-spacing: 0px;
     margin-bottom: .75em;
     margin-top: 2em;
