--- a/css/crime.css
+++ b/css/crime.css
@@ -1187,7 +1187,7 @@ h6,
     /*font-family: Arial,verdana,sans-serif;*/
     font-weight: 400;
     line-height: 1.2em;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     /*font-family: proxima-nova;*/
     font-weight: 100;
     font-style: normal;
