--- a/css/menu.css
+++ b/css/menu.css
@@ -3,7 +3,8 @@
   common start
 -----------------------------------------*/
   #bg {
-      background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
+      /*background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);*/
+      background-image: url(https://i.pinimg.com/originals/ad/58/e6/ad58e678fa65adbdb25f150ca68824a1.jpg);
       background-color:rgb(255 255 255 / 0.95);
       background-blend-mode: exclusion;
 }
