--- a/css/menu.css
+++ b/css/menu.css
@@ -4,7 +4,7 @@
 -----------------------------------------*/
   #bg {
       /*background-image: url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);*/
-      background-image: url(https://i.pinimg.com/originals/34/5e/d0/345ed004408637523fac98fb52888e9d.jpg);
+      background-image: url(https://i.pinimg.com/originals/9f/58/ba/9f58ba7d51c008540fa772463f80f946.png);
       background-color:rgb(255 255 255 / 0.95);
       background-blend-mode: exclusion;
 }
