--- a/css/menu.css
+++ b/css/menu.css
@@ -3,13 +3,13 @@
   common start
 -----------------------------------------*/
   #bg {
-      background-image:url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg);
+      /* background-image:url(https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg); */
 
       /* background-image: url(https://i.pinimg.com/originals/db/e5/7c/dbe57ce6bbe5831555e95f0f1b901d40.jpg); */
 
       /*background-image: url(https://i.pinimg.com/originals/84/ec/d9/84ecd90084722cdb32030c780dca0a11.jpg);*/
-      background-color:rgb(255 255 255 / 1);
-      background-blend-mode: exclusion;
+      background-color:rgb(0 0 0 / 1);
+      /* background-blend-mode: exclusion; */
       /* background-color: rgb(2 10 19);
     background-blend-mode: darken; */
 }
@@ -188,7 +188,7 @@ ul.folder-child  li a {
 
 .navbar-brand img {
     width:100%;
-    max-width:40px;
+    max-width:70px;
 
 }
 
