--- a/css/crime.css
+++ b/css/crime.css
@@ -4283,8 +4283,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
   height: 50px;
-  padding: 15px 15px;
-  font-size: 18px;
+  /* padding: 15px 15px; */
+   padding: 0px;
+  /* font-size: 18px; */
   line-height: 20px;
 }
 .navbar-brand:hover,
