--- a/css/menu.css
+++ b/css/menu.css
@@ -25,7 +25,8 @@
     }
 
     body {
-      color: #fff;
+      /* color: #fff; */
+      color: rgba(118,248,76,1);
       background-color: black;
       /*font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";*/
       /*font-family: "Noto Serif JP","Arial", "Yu Gothic", "Meiryo" ;*/
