<a class="navbar-brand" href="index.html"><img src="images/geometric_pattern.svg"></a>

--- a/css/crime.css
+++ b/css/crime.css
@@ -1098,8 +1098,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  /* color: #fff; */
-  color: rgba(118,248,76,1);
+  color: #fff;
   text-decoration: none;
 }
 a:hover,
