--- a/css/menu.css
+++ b/css/menu.css
@@ -25,8 +25,7 @@
     }
 
     body {
-      /* color: #fff; */
-      color: rgba(118,248,76,1);
+      color: #fff;
       background-color: black;
       /*font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";*/
       /*font-family: "Noto Serif JP","Arial", "Yu Gothic", "Meiryo" ;*/
