--- a/css/menu.css
+++ b/css/menu.css
@@ -44,9 +44,11 @@
       line-height: 1.6em;
     }
   }
-
-
-
+@media (min-width: 1200px){
+  header {
+max-width: 1140px;
+}
+}
     header {
       padding: 20px 20px 50px 20px;
       /*max-width: 1100px;*/
