--- a/css/menu.css
+++ b/css/menu.css
@@ -48,6 +48,10 @@
   header {
 max-width: 1140px;
 }
+@media (min-width: 1000px){
+  header {
+max-width: 980px;
+}
 }
     header {
       padding: 20px 20px 50px 20px;
