--- a/css/menu.css
+++ b/css/menu.css
@@ -577,3 +577,10 @@ h3 {
   display: -ms-flexbox!important;
   display: flex!important;
 }
+/*----------------------------------------
+container
+-----------------------------------------*/
+.container .col-md-12{
+    padding-left: 0px;
+    padding-right: 0px;
+}
