--- a/css/menu.css
+++ b/css/menu.css
@@ -580,7 +580,9 @@ h3 {
 /*----------------------------------------
 container
 -----------------------------------------*/
+/*
 .container .col-md-12{
     padding-left: 0px;
     padding-right: 0px;
 }
+*/
