--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -8,7 +8,7 @@
       /* background-image: url(https://i.pinimg.com/originals/db/e5/7c/dbe57ce6bbe5831555e95f0f1b901d40.jpg); */
 
       /*background-image: url(https://i.pinimg.com/originals/84/ec/d9/84ecd90084722cdb32030c780dca0a11.jpg);*/
-      background-color:rgb(0 14 40 / 1);
+      /*background-color:rgb(0 14 40 / 1);*/
       /* background-blend-mode: exclusion; */
       /* background-color: rgb(2 10 19);
     background-blend-mode: darken; */
@@ -26,7 +26,7 @@
 
     body {
       color: #fff;
-      background-color: black;
+      background-color:rgb(0 14 40 / 1);
       /*font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";*/
       /*font-family: "Noto Serif JP","Arial", "Yu Gothic", "Meiryo" ;*/
       font-weight: 400;
