--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@ body {
   }
   
   header, footer {
-    background: #333;
+    /*background: #333;*/
     color: #fff;
     padding: 1rem;
     text-align: center;
