--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -25,18 +25,18 @@
     }
 
     body {
-      color: #fff;
-      background-color:rgb(0 14 40 / 1);
+      color: #fff !important;
+      background-color:rgb(0 14 40 / 1) !important;
       /*font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Arial", "Yu Gothic", "Meiryo", sans-serif,"Font Awesome 5 Brands";*/
       /*font-family: "Noto Serif JP","Arial", "Yu Gothic", "Meiryo" ;*/
-      font-weight: 400;
-      font-size: 14px;
-      letter-spacing: 0px;
-      font-weight: 100;
-      font-style: normal;
-      font-size: 10px;
-      line-height: 1.3em;
-      letter-spacing: 0.05em;
+      font-weight: 400 !important;
+      font-size: 14px !important;
+      letter-spacing: 0px !important;
+      font-weight: 100 !important;
+      font-style: normal !important;
+      font-size: 10px !important;
+      line-height: 1.3em !important;
+      letter-spacing: 0.05em !important;
     }
 
 @media (min-width: 1200px){
