--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,25 @@
+/* global.cssに追加 */
+
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  background-color: rgb(0, 14, 40) !important;
+  color: #fff;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.3em;
+}
+
+.navbar {
+  background-color: rgb(0, 14, 40);
+}
+
+.nav-link {
+  color: #fff !important;
+}
+
+.dropdown-menu {
+  background-color: rgb(0, 14, 40);
+}
+
+.dropdown-item {
+  color: #fff !important;
 }
